Реализовал LivingEntity. Добавил Metadata сущностям